# ynix_app

./: .gitignore  README.md  __init__.py  app_shell.kv  main.py  pyproject.toml  snippets.ipynb
custom_widgets/: __init__.py  attacker_settings_form.py  docbrowser.py  flat_button.py
data/: wiki_page1.txt
kv/: login_screen.kv  sim_settings_screen.kv  splash_screen.kv
pages/: __init__.py  login_screen.py  screen_manager.py  sim_settings_screen.py  splash_screen.py  wiki_screen.py
pages/login/: __init__.py  login_screen.kv  login_screen.py
pages/sim_settings/: __init__.py  attacker_settings_form.py  sim_settings_screen.py  sim_settings_style.kv
pages/splash/: __init__.py  splash_screen.kv  splash_screen.py
pages/wiki/: wiki.kv  wiki.py
requests/: __init__.py  request_client.py
src/: __init__.py
