[tool.poetry]
name = "Kivy_Boiler"
version = "0.1.0"
description = "???"
authors = [
    "Josh S Wilkinson <JoshsWilkinson@Outlook.com>",
]
readme = "README.md"
repository = "https://github.com/Phelsong/Kivy_BoilerV1"
packages = [
    { include = "pages" },
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10.6"
pendulum = "^2.1"
Kivy = "^2.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = [
    "poetry-core>=1.2.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_dev = 'main:RedMoon().run()'
