[tool.poetry]
name = "Project_Ynix"
version = "0.1.0"
description = "???"
authors = ["Josh S Wilkinson <JoshsWilkinson@Outlook.com>"]
readme = "README.md"
repository = "https://github.com/Phelsong/ynix_app"
packages = [{ include = "pages" }, { include = "custom_widgets" }]

[tool.poetry.dependencies]
python = ">=3.10.6,<3.13"
Kivy = { extras = ["full"], version = "^2.3.0" }
httpx = { extras = ["http2"], version = ">=0.23.0" }
orjson = ">=3.10.5"

[tool.poetry.dev-dependencies]
black = ">=22.8.0"
cython = ">=3.0.0"
ipykernel = ">=6.24.0"


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'main:ProjectYnix.run'
